--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,21 +5,25 @@
 
     --text-color:#282c34;
     --text-font: helvetica;
+
 }
 
 body, html{
-    width: 100%;
+    width: 100vw;
     height: 100%;
     overflow-x: hidden;
     font-family: var(--text-font);
 }
 
-main#main{
+div#root{
 
     width: 100%;
-    height: 1000%;
+    height:1000%;
     display: grid;
-    grid-template-columns: 30% 1fr;
-    grid-template-rows: auto var(--navBar-height) 1fr auto;
+    grid-template-columns: 100%;
+    grid-template-rows: min-content var(--navBar-height) 1fr;
     position: relative;
 }
+
+
+
