--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -18,10 +18,9 @@ body, html{
 div#root{
 
     width: 100%;
-    height:1000%;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: min-content var(--navBar-height) 1fr;
+    grid-template-rows: min-content var(--navBar-height) 1fr auto;
     position: relative;
 }
 
