Se agregaron los botones iniciar sesión/registrarse

--- a/public/styles/headerNavBar.css
+++ b/public/styles/headerNavBar.css
@@ -4,6 +4,10 @@
     grid-column: 1;
 }
 
+#root.completeWindow #header-navBar{
+    display: none;
+}
+
 #header-navBar ul{
     list-style: none;
     display: flex;
