--- a/public/styles/headerNavBar.css
+++ b/public/styles/headerNavBar.css
@@ -2,6 +2,7 @@
 #header-navBar{
     width: 100%;
     grid-column: 1;
+    background-color: #334756;
 }
 
 #header-navBar ul{
@@ -21,7 +22,7 @@
 
 #header-navBar a{
     text-decoration: none;
-    color:black;
+    color:white;
     font-weight: bold;
 }
 
