--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,6 +14,7 @@ body, html{
     height: 100%;
     overflow-x: hidden;
     font-family: var(--text-font);
+    background-color: #fafafa;
 }
 
 div#root{
