--- a/public/styles/navBar.css
+++ b/public/styles/navBar.css
@@ -12,11 +12,17 @@
     top: 0;
     background-color: var(--text-color);
     grid-column: 1;
+    z-index: 999;
+}
+
+#navBar .navContainer{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px 10px 20px;
-    z-index: 999;
+    position: relative;
 }
 
 /*   ICONOS   */
