Se comenzó la pagina de producto

--- a/public/styles/productRegistrationPage.css
+++ b/public/styles/productRegistrationPage.css
@@ -151,6 +151,10 @@
     cursor: not-allowed;
 }
 
+#formSection .spinner{
+    display: none;
+}
+
 @media only screen and (max-width:1000px){
     #productRegistrationPage{
         grid-template-columns: 1fr auto;
