--- a/public/styles/productPage.css
+++ b/public/styles/productPage.css
@@ -16,17 +16,17 @@
     padding: 50px 0 50px 0;
 }
 
-#main-product-container{
+#productPage #main-product-container{
     display: grid;
     grid-template-columns: 60% 40%;
     position:relative;
 }
 
-#productInfo > div{
+#productPage #productInfo > div{
     width: 90%;
 }
 
-#productImage{
+#productPage #productImage{
     display: flex;
     justify-content: center;
 }
@@ -39,7 +39,7 @@
 }
 
 
-#productInfo #productInfo-container{
+#productPage #productInfo #productInfo-container{
 
     border: 1px solid rgba(0,0,0,.1);
     border-radius: 15px;
@@ -50,7 +50,7 @@
     margin: auto;
 }
 
-#productInfo .tags > span{
+#productPage #productInfo .tags > span{
     color: rgb(10, 124, 230);
     font-weight: bold;
     user-select: none;
@@ -58,26 +58,26 @@
     -webkit-user-select: none;
 }
 
-#productInfo .tags > span:not(.separator){
+#productPage #productInfo .tags > span:not(.separator){
     cursor:pointer;
 }
 
-#productInfo .tags > span:not(.separator):hover{
+#productPage #productInfo .tags > span:not(.separator):hover{
     text-decoration: underline;
 }
 
-#productInfo #product-title{
+#productPage #productInfo #product-title{
     font-size: 35px;
     line-height: 115%;
 }
 
-#product-author img{
+#productPage #product-author img{
     width: 40px;
     height: 40px;
     border-radius: 50%;
 }
 
-#product-author{
+#productPage #product-author{
     margin-left:  15px;
     font-weight: bold;
     display: flex;
@@ -87,79 +87,50 @@
     -moz-user-select: none;
 }
 
-#product-author img{
+#productPage #product-author img{
     cursor: pointer;
 }
 
-#product-author span{
+#productPage #product-author span{
     cursor: pointer;
 }
 
-#product-author span:hover{
+#productPage #product-author span:hover{
     text-decoration: underline;
 }
 
-#product-author img:hover ~ span{
+#productPage #product-author img:hover ~ span{
     text-decoration: underline;
 }
 
-#product-description{
+#productPage #product-description{
     color: #9b9b9b;
     text-align: justify;
     margin: 0 15px 0 15px;
 
 }
 
-#product-buttons{
+#productPage #product-buttons{
     display: flex;
     justify-content: center;
 }
 
-#product-buttons button.requestDonation{
-    border: none;
-    outline: none;
-    width: auto;
-    margin: auto;
-    background-color: rgb(7, 93, 223);
-    font-size: 18px;
-    padding: 12px 25px 12px 25px;
-    color: white;
-    border-radius: 5px;
-}
-
-#product-buttons button.requestDonation:hover{
-    background-color: rgb(42, 120, 236);
-}
-
-#product-buttons button.requestDonation:active{
-    background-color: rgb(6, 86, 206);
-}
-#product-buttons button.requestDonation:disabled{
-    background-color: rgb(108 162 243);
-    cursor: not-allowed;
-}
 
 @media only screen and (max-width:900px){
 
-    #main-product-container{
+    #productPage #main-product-container{
         display: grid;
         grid-template-columns: 1fr;
         position:relative;
         gap: 50px;
     }
 
-    #productInfo{
+    #productPage #productInfo{
         grid-row: 1;
     }
 
-    #productImage{
+    #productPage #productImage{
         grid-row: 2;
-    }
-
-   
-
-    #productPage-container{
-        
     }
 
 }
