--- a/public/styles/buttons.css
+++ b/public/styles/buttons.css
@@ -1,4 +1,3 @@
-
 .blue-button{
     border: none;
     outline: none;
@@ -28,7 +27,6 @@
     border: none;
     outline: none;
     width: auto;
-    margin: auto;
     background-color: #d50707;
     font-size: 18px;
     padding: 12px 25px 12px 25px;
@@ -55,7 +53,6 @@
     border: none;
     outline: none;
     width: auto;
-    margin: auto;
     border: 2px solid rgb(7, 93, 223);
     background-color: white;
     font-size: 18px;
@@ -63,4 +60,28 @@
     color: rgb(7, 93, 223);
     border-radius: 5px;
     transition: all .3s ;
+}
+
+.green-button{
+    border: none;
+    outline: none;
+    width: auto;
+    background-color: rgb(5, 190, 5);
+    font-size: 18px;
+    padding: 12px 25px 12px 25px;
+    color: white;
+    border-radius: 5px;
+    transition: all .3s ;
+}
+
+.green-button:hover{
+    background-color: rgb(78, 214, 44);
+}
+
+.green-button:active{
+    background-color: rgb(39, 206, 6);
+}
+.green-button:disabled{
+    background-color: rgb(139, 243, 108);
+    cursor: not-allowed;
 }
