--- a/public/styles/productPage.css
+++ b/public/styles/productPage.css
@@ -113,6 +113,45 @@
 #productPage #product-buttons{
     display: flex;
     justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+#productPage .action-button2{
+    display: none;
+}
+
+#productPage .statusInfo{
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    margin: 0 15px 0 15px;
+    display: none;
+}
+
+#productPage .statusInfo .icon{
+    width: 16px;
+    height: 16px;
+    min-height: 16px;
+    min-width: 16px;
+    background-image: url(../images/icons/info.png);
+    background-size: cover;
+    background-position: center;
+}
+
+#productPage .statusInfo.red-icon .icon{
+    background-image: url(../images/icons/red-info.png);
+}
+
+#productPage .statusInfo.green-icon .icon{
+    background-image: url(../images/icons/green-info.png);
+}
+
+
+#productPage .statusInfo .textInfo{
+    font-size: 12px;
+    color: gray;
+    text-align: justify;
 }
 
 
