--- a/public/styles/sideMenu.css
+++ b/public/styles/sideMenu.css
@@ -51,6 +51,10 @@ nav{
     left: 0px;
 }
 
+.side-nav.instant{
+    transition: none;
+}
+
 .side-nav .btn-close{
     font-size: 36px;
     color:white;
