--- a/public/styles/registrationPage.css
+++ b/public/styles/registrationPage.css
@@ -1,6 +1,7 @@
 #registrationPage{
     margin: 0;
     padding: 0;
+    background: url(../images/backgrounds/registration_bg.jpg) no-repeat center top;
     box-sizing: border-box;
     font-family: helvetica;
 }
@@ -12,8 +13,107 @@ body{
 }
 
 .container{
+    margin-top: 200px;
     max-width: 700px;
     width: 100%;
     background: #282c34;
     color: #fff;
+    padding: 25px 30px;
+    border-radius: 5px;
+}
+
+.container .title{
+    font-size: 25px;
+    font-weight: 500;
+    position: relative;
+}
+
+.container .title::before{
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 30px;
+    background: #fff;
+    left: 0;
+    bottom: 0;
+}
+
+.container form .user-details{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+form .user-details .input-box{
+    margin: 20px 0 12px 0;
+    width: calc(100% / 2 - 20px);
+}
+
+.user-details .input-box .details{
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.user-details .input-box input{
+    width: 100%;
+    height: 45px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    color: #fff;
+    font-size: 16px;
+}
+
+form .sex-details .gender-title{
+    font-weight: bold;
+}
+
+form .sex-details .category{
+    display: flex;
+    width: 80%;
+    margin: 14px 0;
+    justify-content: space-evenly;
+}
+
+form .sex-details .category label{
+    display: flex;
+    align-items: center;
+}
+
+form .sex-details .category .dot{
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    margin-right: 10px;
+    background: #d9d9d9;
+    border: 5px solid transparent;
+}
+
+#dot-1:checked ~ .category label .one,
+#dot-2:checked ~ .category label .two,
+#dot-3:checked ~ .category label .three{
+    border-color: #d9d9d9;
+    background: #282c34;
+}
+
+form input[type="radio"]{
+    display: none;
+}
+
+form .button{
+    height: 40px;
+    margin: 40px 0;
+}
+
+form .button input{
+    width: 100%;
+    border: none;
+    outline: none;
+    height: 40px;
+    background-color: cadetblue;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 20px;
 }
