--- a/public/styles/buttons.css
+++ b/public/styles/buttons.css
@@ -82,6 +82,20 @@
     background-color: rgb(39, 206, 6);
 }
 .green-button:disabled{
-    background-color: rgb(139, 243, 108);
+    background-color: rgb(165, 250, 140);
     cursor: not-allowed;
+}
+
+
+.white-button{
+    border: none;
+    outline: none;
+    width: auto;
+    background-color: white;
+    font-size: 18px;
+    padding: 12px 25px 12px 25px;
+    color: #282c34;
+    border-radius: 5px;
+    transition: all .3s ;
+    font-weight: bold;
 }
