--- a/public/styles/popUp.css
+++ b/public/styles/popUp.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 9999;
+    z-index: 9;
     background-color: rgba(0, 0, 0, 0.377);
     top: 0;
     left: 0;
@@ -48,7 +48,20 @@
     top: 20px;
     cursor: pointer;
     pointer-events: all;
-    
+    display: none;
+}
+
+.popUp .errorMessage{
+    text-align: center;
+    font-weight: bold;
+    color: red;
+    display: none;
+}
+
+.popUp .spinner{
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @keyframes showPopUp{
@@ -59,5 +72,11 @@
 
     to{
         opacity: 1;
+    }
+}
+
+@media only screen and (max-width:530px){
+    .popUp-body{
+        width: 95vw;
     }
 }
