--- a/public/styles/productPage.css
+++ b/public/styles/productPage.css
@@ -22,6 +22,12 @@
     position:relative;
 }
 
+#productPage #productInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
 #productPage #productInfo > div{
     width: 90%;
 }
@@ -41,13 +47,19 @@
 
 #productPage #productInfo #productInfo-container{
 
+    
+    
+}
+
+#productPage #productInfo .productInfo-section{
+
     border: 1px solid rgba(0,0,0,.1);
     border-radius: 15px;
+    margin: auto;
     padding: 25px;
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin: auto;
 }
 
 #productPage #productInfo .tags > span{
@@ -152,6 +164,18 @@
     font-size: 12px;
     color: gray;
     text-align: justify;
+}
+
+#productPage .spinner{
+    margin: auto;
+    display: none;
+}
+
+#productPage .errorMessage{
+    text-align: center;
+    font-weight: bold;
+    color: red;
+    display: none;
 }
 
 
