--- a/public/styles/requestDonationPopUp.css
+++ b/public/styles/requestDonationPopUp.css
@@ -51,6 +51,11 @@
     text-align: center;
 }
 
+.popUp.requestDonation .spinner{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 @media only screen and (max-width:480px){
     .popUp.requestDonation textarea{
         width: 90%;
