Loading y not found page. Cambio en filtro categ.

--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -1,8 +1,8 @@
-footer{
-    
-}
-
 footer .footerWave{
     width: 100%;
     height: 150px;
+}
+
+#root.completeWindow footer{
+    display: none;
 }
