--- a/public/styles/registrationPage.css
+++ b/public/styles/registrationPage.css
@@ -1,19 +1,20 @@
 #registrationPage{
     margin: 0;
     padding: 0;
-    background: url(../images/backgrounds/registration_bg.jpg) no-repeat center top;
     box-sizing: border-box;
     font-family: helvetica;
 }
 #registrationPage{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url(../images/backgrounds/registration_bg.jpg) no-repeat center top;
     height: 100vh;
     justify-content: center;
     align-items: center;
 }
 
 .container{
-    margin-top: 200px;
     max-width: 700px;
     width: 100%;
     background: #282c34;
