--- a/public/styles/filterSection.css
+++ b/public/styles/filterSection.css
@@ -13,10 +13,9 @@
     gap: 25px;
     position: sticky;
     top: calc(var(--navBar-height) + 25px);
-    margin-left: 25px;
     margin-bottom: 25px;
     overflow: hidden;
-    padding: 10px 0 30px 0;
+    padding: 10px 0 30px 25px;
 }
 
 .filterItem{
