--- a/public/styles/registrationPage.css
+++ b/public/styles/registrationPage.css
@@ -3,19 +3,20 @@
     padding: 0;
     box-sizing: border-box;
     font-family: helvetica;
+    background: url(../images/backgrounds/registration_bg.png) no-repeat;
+    background-size:cover;
 }
 #registrationPage{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url(../images/backgrounds/registration_bg.jpg) no-repeat center top;
     height: fit-content;
     justify-content: center;
     align-items: center;
 }
 
 #registrationPage .container{
-    max-width: 1000px;
+    max-width: 750px;
     width: 100%;
     background: #282c34;
     color: #fff;
@@ -31,6 +32,8 @@
     font-weight: bold;
     position: relative;
     text-align: center;
+    padding-bottom: 25px;
+    padding-top: 25px;
 }
 
 /*#registrationPage .container .title::before{
@@ -165,4 +168,20 @@
     font-weight: bold;
     margin-bottom: 25px;
     margin-top: 25px;
+    padding-top: 25px;
+}
+
+#registrationPage .profilePicPicker{
+    margin: auto;
+    padding-top: 20px;
+    max-width: 60%;
+    height: 25%;
+    padding-bottom: 10px;
+}
+
+#registrationPage .dpiPicker{
+    margin: auto;
+    padding-top: 20px;
+    max-width: 60%;
+    height: 25%;
 }
