--- a/public/styles/profilePage.css
+++ b/public/styles/profilePage.css
@@ -16,7 +16,7 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    position:relative;
+    position: relative;
 }
 
 #profile-page .banner::after {
@@ -28,7 +28,7 @@
     bottom: 0;
     height: 100%;
     width: 100%;
-    background-color: rgb(0,0,0,0.2);
+    background-color: rgb(0, 0, 0, 0.2);
 }
 
 
@@ -39,7 +39,7 @@
     align-items: center;
 }
 
-#profile-page .profileData{
+#profile-page .profileData {
     width: 100%;
     min-width: calc(300px + 2 * var(--margin));
     height: fit-content;
@@ -47,9 +47,9 @@
     z-index: 1;
     position: sticky;
     top: 20vh;
-} 
+}
 
-#profile-page .dataContainer{
+#profile-page .dataContainer {
     width: 300px;
     height: fit-content;
     margin: auto;
@@ -63,26 +63,28 @@
     box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
-#profile-page .profileData .profilePicture{
+#profile-page .profileData .profilePicture-container {
     width: 50%;
-    border-radius: 50%;
+}
+
+#profile-page .profileData .profilePicture {
     box-shadow: 0px 0px 3px 1px rgba(255, 255, 255, 0.2);
 }
 
-#profile-page .profileData .userName h3{
+#profile-page .profileData .userName h3 {
     font-weight: bold;
     font-family: 'Yanone Kaffeesatz';
     font-size: 40px;
     text-align: center;
 }
 
-#profile-page .profileData .userName h4{
+#profile-page .profileData .userName h4 {
     font-weight: 300;
     font-size: 18px;
     text-align: center;
 }
 
-#profile-page .optionsMenu{
+#profile-page .optionsMenu {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -91,7 +93,7 @@
 
 }
 
-#profile-page .optionsMenu > div{
+#profile-page .optionsMenu>div {
     border: 0;
     border-bottom: 2px;
     border-color: rgb(218, 218, 218);
@@ -104,9 +106,9 @@
     cursor: pointer;
 }
 
-#profile-page .optionsMenu > div:hover,
-#profile-page .optionsMenu > div.selected {
-    
+#profile-page .optionsMenu>div:hover,
+#profile-page .optionsMenu>div.selected {
+
     border-bottom: 4px;
     border-color: rgb(6, 114, 238);
     border-style: solid;
@@ -118,55 +120,55 @@
 
 /*Donations container */
 
-#profile-page .donationsContainer{
+#profile-page .donationsContainer {
     padding: 25px var(--margin) 25px 0;
     width: 100%;
 }
 
-#profile-page .donationsContainer .products-container{
-    grid-template-columns: repeat(5,1fr);
+#profile-page .donationsContainer .products-container {
+    grid-template-columns: repeat(5, 1fr);
 }
 
-#profile-page .donationsContainer .products-container{
-    grid-template-columns: repeat(4,1fr);
+#profile-page .donationsContainer .products-container {
+    grid-template-columns: repeat(4, 1fr);
 }
 
 
-@media only screen and (min-height:1500px){
-    #profile-page .profileData{
+@media only screen and (min-height:1500px) {
+    #profile-page .profileData {
         top: unset;
-    } 
-}
-
-@media only screen and (max-width:2400px){
-    #profile-page .donationsContainer .products-container{
-        grid-template-columns: repeat(4,1fr);
     }
 }
 
-@media only screen and (max-width:1700px){
-
-    #profile-page .donationsContainer .products-container{
-        grid-template-columns: repeat(3,1fr);
+@media only screen and (max-width:2400px) {
+    #profile-page .donationsContainer .products-container {
+        grid-template-columns: repeat(4, 1fr);
     }
-    
-    #profile-page .optionsMenur{
+}
+
+@media only screen and (max-width:1700px) {
+
+    #profile-page .donationsContainer .products-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    #profile-page .optionsMenur {
         margin-top: 50px;
-        
+
     }
 }
 
 
-@media only screen and (max-width:1400px){
-    #profile-page .donationsContainer .products-container{
-        grid-template-columns: repeat(2,1fr);
+@media only screen and (max-width:1400px) {
+    #profile-page .donationsContainer .products-container {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media only screen and (max-width:1050px){
+@media only screen and (max-width:1050px) {
 
-    #profile-page .donationsContainer .products-container{
-        grid-template-columns: repeat(2,1fr);
+    #profile-page .donationsContainer .products-container {
+        grid-template-columns: repeat(2, 1fr);
     }
 
     #profile-page {
@@ -177,52 +179,52 @@
     #profile-page .banner {
         grid-column: 1;
     }
-    
-    
+
+
     #profile-page .profileDonations {
         grid-column: 1;
     }
 
-    #profile-page .profileData{
-    
+    #profile-page .profileData {
+
         position: relative;
         top: unset;
-    } 
-    
-    #profile-page .donationsContainer{
+    }
+
+    #profile-page .donationsContainer {
         width: 75% !important;
     }
-    
-    
+
+
 }
 
 
-@media only screen and (max-width:900px){
-    
-    #profile-page .donationsContainer{
+@media only screen and (max-width:900px) {
+
+    #profile-page .donationsContainer {
         width: 85% !important;
     }
 }
 
-@media only screen and (max-width:700px){
+@media only screen and (max-width:700px) {
 
-    #profile-page .donationsContainer .products-container{
-        grid-template-columns: repeat(1,1fr);
+    #profile-page .donationsContainer .products-container {
+        grid-template-columns: repeat(1, 1fr);
     }
-    
-    #profile-page .donationsContainer{
+
+    #profile-page .donationsContainer {
         width: 85% !important;
     }
 }
 
-@media only screen and (max-width:400px){
+@media only screen and (max-width:400px) {
 
-    #profile-page .profileData{
+    #profile-page .profileData {
         width: 100%;
         min-width: unset;
-    } 
+    }
 
-    #profile-page .dataContainer{
+    #profile-page .dataContainer {
         width: 85%;
     }
 }
