--- a/public/styles/notifications.css
+++ b/public/styles/notifications.css
@@ -55,12 +55,15 @@
      width: 100%;
      min-height:70px ;
      background-color: rgb(255, 255, 255);
-     display: flex;
+     display: grid;
+     grid-template-columns: min-content 1fr;
+     gap: 12px;
      position: relative;
      align-items: center;
      padding: 7px 12px 7px 12px;
      border-bottom: 1px solid rgb(65, 65, 65);
      cursor: pointer;
+     
  }
  
  .viewed{
@@ -76,16 +79,11 @@
      width: 32px;
      height: 32px;
      border-radius: 50%;
-     margin-right: 12px;
  }
  
  .texto{
-     display: -webkit-box;
-     -webkit-box-orient: vertical;
-     overflow: hidden;
-     text-overflow: ellipsis;
-     white-space: normal;
-     -webkit-line-clamp: 3;
+    display: flex;
+    flex-direction: column;
      padding: 0 8px 0 0;
  
  }
@@ -96,6 +94,18 @@
      text-overflow: ellipsis;
      overflow: hidden;
  }
+
+ .texto .body-noti{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    -webkit-line-clamp: 3;
+    font-size: 15px;
+    color: var(--gray-text-color);
+
+}
  
  .loading-spinner{
      display: flex;
